--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/server.js",
+    "dev": "nodemon --watch src -e ts --exec ts-node src/server.ts",
+    "build": "tsc",
+    "serve": "tsc && node dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +19,17 @@
     "express": "^4.21.0",
     "ioredis": "^5.4.1",
     "mongoose": "^8.6.3",
+    "nodemon": "^3.1.7",
     "redis": "^4.7.0",
     "socket.io": "^4.8.0"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.7.4",
+    "@types/socket.io": "^3.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
   }
 }
