--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "node server.ts",
     "dev": "nodemon --watch src -e ts --exec ts-node src/server.ts",
     "build": "tsc",
     "serve": "tsc && node dist/server.js"
@@ -21,7 +21,14 @@
     "mongoose": "^8.6.3",
     "nodemon": "^3.1.7",
     "redis": "^4.7.0",
-    "socket.io": "^4.8.0"
+    "socket.io": "^4.8.0",
+    "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.7.4",
+    "@types/socket.io": "^3.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
